Unis are links now

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <section id="about-me">
         <div class="container">
             <h2>About Me</h2>
-            <p>I’m a CS PhD student in the PriSec group at Karlstad University (KAU), Sweden since 2019. My research area primarily centers around cybersecurity, with a particular focus on the Internet of Things (IoT) and the development of privacy-preserving technologies.</p>
+            <p>I’m a CS PhD student in the PriSec group at <a href="https://www.kau.se/">Karlstad University (KAU)</a>, Sweden since 2019. My research area primarily centers around cybersecurity, with a particular focus on the Internet of Things (IoT) and the development of privacy-preserving technologies.</p>
             <p>During my research, I have focused on Vehicular Ad-Hoc Networks (VANETs), developing non-interactive privacy-preserving authentication methods. This aspect of my research utilizes advanced cryptographic techniques, including anonymous credentials and zero-knowledge proofs, to ensure user privacy while maintaining the authenticity and integrity of user attributes.</p>
-            <p>I finished my Master's degree at Sapienza Universita di Roma in 2018 specializing in Data Networks and Security writing my thesis Multi-Channel Exfiltration Techniques.</p>
+            <p>I finished my Master's degree at <a href="https://www.uniroma1.it/en/pagina-strutturale/home">Sapienza Universita di Roma</a> in 2018 specializing in Data Networks and Security writing my thesis Multi-Channel Exfiltration Techniques.</p>
             <p>Fluent in English and Arabic with an OK understanding of Swedish and a basic level Italian, I enjoy connecting with a global audience and expanding my multicultural perspectives.</p>
         </div>
     </section>
