--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
             <nav class="navbar">
                 <div class="container">
-                    <a href="#" class="logo">Mahdi Akil</a> <!-- Logo -->
+                    <a href="/" class="logo">Mahdi Akil</a> <!-- Logo -->
                     <div class="hamburger-menu">
                         <!-- Hamburger Icon -->
                         <span></span>
