--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
     <section id="publications">
         <h1>Publications</h1>
         <div class="publications-grid">
+            <div class="publication">
+                <a href="https://repository.ubn.ru.nl/bitstream/handle/2066/308843/308843.pdf?sequence=1" target='blank'>
+                    <img src="assets/paper7.png" alt="Paper Title">
+                    <p>A Secure and pp Authentication Scheme with a
+                        Zero-Trust Approach to Vehicle Renting in VANETs</p>
+                </a>
+            </div>
           <div class="publication">
               <a href="https://link.springer.com/chapter/10.1007/978-3-031-57978-3_13" target='blank'>
                   <img src="assets/paper6.png" alt="Paper Title">
